; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_walker.c_sqlite3WalkExprList.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_walker.c_sqlite3WalkExprList.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.ExprList_item* }
%struct.ExprList_item = type { i32 }

@WRC_Abort = common dso_local global i32 0, align 4
@WRC_Continue = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3WalkExprList(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ExprList_item*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %5, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %9 = icmp ne %struct.TYPE_3__* %8, null
  br i1 %9, label %10, label %36

10:                                               ; preds = %2
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  store i32 %13, i32* %6, align 4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 1
  %16 = load %struct.ExprList_item*, %struct.ExprList_item** %15, align 8
  store %struct.ExprList_item* %16, %struct.ExprList_item** %7, align 8
  br label %17

17:                                               ; preds = %30, %10
  %18 = load i32, i32* %6, align 4
  %19 = icmp sgt i32 %18, 0
  br i1 %19, label %20, label %35

20:                                               ; preds = %17
  %21 = load i32*, i32** %4, align 8
  %22 = load %struct.ExprList_item*, %struct.ExprList_item** %7, align 8
  %23 = getelementptr inbounds %struct.ExprList_item, %struct.ExprList_item* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i64 @sqlite3WalkExpr(i32* %21, i32 %24)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %20
  %28 = load i32, i32* @WRC_Abort, align 4
  store i32 %28, i32* %3, align 4
  br label %38

29:                                               ; preds = %20
  br label %30

30:                                               ; preds = %29
  %31 = load i32, i32* %6, align 4
  %32 = add nsw i32 %31, -1
  store i32 %32, i32* %6, align 4
  %33 = load %struct.ExprList_item*, %struct.ExprList_item** %7, align 8
  %34 = getelementptr inbounds %struct.ExprList_item, %struct.ExprList_item* %33, i32 1
  store %struct.ExprList_item* %34, %struct.ExprList_item** %7, align 8
  br label %17

35:                                               ; preds = %17
  br label %36

36:                                               ; preds = %35, %2
  %37 = load i32, i32* @WRC_Continue, align 4
  store i32 %37, i32* %3, align 4
  br label %38

38:                                               ; preds = %36, %27
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i64 @sqlite3WalkExpr(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
